Squashed commit of the following:
commit 0edca5add9abf87f767f753690cdd68edb051a8c
Merge: 43029fb fcd5286
Author: Lemmos-dev <adamlemmey2197@gmail.com>
Date:   Tue Nov 5 20:18:40 2024 +0800

    Merge branch 'Adam_Branch'

commit 43029fb1530e5dc54e4a66db4abbe9f11d8e508a
Author: rockyyy1 <124854700+rockyyy1@users.noreply.github.com>
Date:   Tue Nov 5 19:47:41 2024 +0800

    last commit for the day lol im tired

commit d85b4f44dee38fe1ea07bfb05cabfb53dc95217f
Author: rockyyy1 <124854700+rockyyy1@users.noreply.github.com>
Date:   Tue Nov 5 19:36:09 2024 +0800

    added video player to articlepage

commit f56389c7b7797e854af9efc72539be235bf93691
Author: rockyyy1 <124854700+rockyyy1@users.noreply.github.com>
Date:   Tue Nov 5 19:23:27 2024 +0800

    Fixed SAXO Scandinavian Article edge case

    This article had multiple paragraphs/images one after the other

commit b53832d3924efa2414c6919f3e0368482dd91f71
Author: rockyyy1 <124854700+rockyyy1@users.noreply.github.com>
Date:   Tue Nov 5 18:02:57 2024 +0800

    articlepage completed

    Bulk of the work done, probably needs testing in case some of the links don't work

commit 77f40894d1213c01b89e642d3850ffed241bc29d
Author: rockyyy1 <124854700+rockyyy1@users.noreply.github.com>
Date:   Tue Nov 5 16:40:03 2024 +0800

    finished tap gestures

    if the user taps on a title or a pictures, it debugs the url

commit 02836845e9ad4b5f0261fec340125475503c16f4
Author: rockyyy1 <124854700+rockyyy1@users.noreply.github.com>
Date:   Tue Nov 5 16:27:03 2024 +0800

    formatted and changed colours

commit a71cb4b34428433726c609cea94b32de61330f48
Author: rockyyy1 <124854700+rockyyy1@users.noreply.github.com>
Date:   Tue Nov 5 15:09:39 2024 +0800

    data feed and display done

commit eb796254ffffb4ccd5170e4d765ec9b45b93ce6d
Author: rockyyy1 <124854700+rockyyy1@users.noreply.github.com>
Date:   Tue Nov 5 14:44:55 2024 +0800

    interviews and reviews done

    tried to implement icons
    might have to check on emulator

commit 

--- a/AccessReel/AccessReel/ArticlePage.xaml
+++ b/AccessReel/AccessReel/ArticlePage.xaml
@@ -6,7 +6,17 @@
     
     <ScrollView>
         <VerticalStackLayout x:Name="ArticleLayout" HorizontalOptions="Center" WidthRequest="800">
-            <Label Text="Article Title" HorizontalOptions="Center" FontSize="Header"/>            
+            <Label x:Name="articleTitle" Text="Article Title" HorizontalOptions="Center" FontSize="Header" FontAttributes="Bold"/>
+            <Image x:Name="banner" Margin="0,20,0,20"/>
+            <StackLayout x:Name="contentStackLayout">
+            </StackLayout>
+            <Button Text="AccessReel" 
+                    BackgroundColor="Black" 
+                    HorizontalOptions="Start"
+                    WidthRequest="100"
+                    TextColor="White"
+                    Clicked="Button_Clicked"/>
+            <Label Text="AccessReel is the Western Australian movie-lovers website."/>
         </VerticalStackLayout>               
     </ScrollView>
 </ContentPage>
