--- a/AccessReel/AccessReel/ArticlePage.xaml
+++ b/AccessReel/AccessReel/ArticlePage.xaml
@@ -8,8 +8,7 @@
         <VerticalStackLayout x:Name="ArticleLayout" HorizontalOptions="Center" WidthRequest="800">
             <Label x:Name="articleTitle" Text="Article Title" HorizontalOptions="Center" FontSize="Header" FontAttributes="Bold"/>
             <Image x:Name="banner" Margin="0,20,0,20"/>
-            <StackLayout x:Name="contentStackLayout">
-            </StackLayout>
+            <StackLayout x:Name="contentStackLayout"></StackLayout>
             <Button Text="AccessReel" 
                     BackgroundColor="Black" 
                     HorizontalOptions="Start"
