--- a/AccessReel/AccessReel/FilmPage.xaml
+++ b/AccessReel/AccessReel/FilmPage.xaml
@@ -1,25 +1,41 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AccessReel.FilmPage"
-             >
+             xmlns:local="clr-namespace:AccessReel"
+             x:Class="AccessReel.FilmPage">
+    
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary>
+                <local:ReviewScoreToAbsLayoutConverter x:Key="ReviewScoreToAbsLayoutConverter"/>
+            </ResourceDictionary>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
     <ScrollView>
         <VerticalStackLayout HorizontalOptions="Fill" >
             <!-- Media Player Goes Here -->
+            <StackLayout x:Name="videoStackLayout"></StackLayout>
+
             <HorizontalStackLayout HorizontalOptions="Center">
-                <Label x:Name="LblTitle" Text="Film Title" HorizontalOptions="Start" FontSize="Title" VerticalOptions="Center" WidthRequest="400"/>
+                <Label x:Name="LblTitle" Text="{Binding Title}" HorizontalOptions="Start" FontSize="Title" VerticalOptions="Center" WidthRequest="400"/>
                 <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutReviewScore" HorizontalOptions="End">
-                    <Ellipse WidthRequest="60" HeightRequest="60" Fill="DarkRed" Stroke="MediumVioletRed" StrokeThickness="15" />
+                    <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" />
                     <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                 </AbsoluteLayout>
             </HorizontalStackLayout>
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand" >
-                <Button x:Name="BtnOverview" Text="Overview" Clicked="BtnOverview_Clicked" WidthRequest="300"/>
-                <Button x:Name="BtnReview" Text="Review" Clicked="BtnReview_Clicked" WidthRequest="300"/>
+                <Button x:Name="BtnOverview" Text="{Binding Title}" Clicked="BtnOverview_Clicked" WidthRequest="300"/>
+                <Button x:Name="BtnNews" Text="News" Clicked="BtnNews_Clicked"  WidthRequest="300"/>
+                <Button x:Name="BtnVideos" Text="Videos" Clicked="BtnVideos_Clicked"  WidthRequest="300"/>
+                <Button x:Name="BtnReviews" Text="Review" Clicked="BtnReview_Clicked" WidthRequest="300"/>
             </HorizontalStackLayout>
+            
+            
             
             <Grid x:Name="FilmOverview" IsVisible="True" Margin="30">
                 <Grid.RowDefinitions>
+                    <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
@@ -27,27 +43,37 @@
                     <ColumnDefinition Width="200"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Image x:Name="ImagePoster" Grid.Column="0" Grid.Row="0"/>
-                <Label Grid.Column="1" Grid.Row="0" x:Name="LblDesc" Text="In Venom: The Last Dance, Tom Hardy returns as Venom, one of Marvel’s greatest and most complex characters, for the final film in the trilogy. Eddie and Venom are on the run. Hunted by both of their worlds and with the net closing in, the duo are forced into a devastating decision that will bring the curtains down on Venom and Eddie’s last dance."/>
-                <!-- User Rating Stuff Goes Here-->
-                
+                <StackLayout Grid.Column="2" Grid.Row="0" >
+                    <Label x:Name ="AUreleaseDate" Text="In Theaters (AU): " HorizontalTextAlignment="End" TextColor="#a2645f"/>
+                    <Label x:Name ="USreleaseDate" Text="In Theaters (USA):  " HorizontalTextAlignment="End" TextColor="#a2645f"/>
+                </StackLayout>
+                <VerticalStackLayout Grid.Column="0" Grid.Row="1">
+                    <Image x:Name="ImagePoster" />
+                    <Button Text="Follow +" TextColor="White" BackgroundColor="#00d0e5" HorizontalOptions="Center" />
+                </VerticalStackLayout>
+                <Label Grid.Column="1" Grid.Row="1" x:Name="LblDesc" Text="{Binding Description}"/>
+
                 <!-- Film Details-->
                 <VerticalStackLayout Grid.Column="0" Grid.Row="2" Margin="30" Grid.ColumnSpan="2">
                     <HorizontalStackLayout>
                         <Label Text="Genre:" WidthRequest="100" />
-                        <Label x:Name="LblGenre" Text="Action, Adventure"/>
+                        <Label x:Name="LblGenre" Text=""/>
                     </HorizontalStackLayout>
                     <HorizontalStackLayout>
                         <Label Text="Cast:" WidthRequest="100"/>
-                        <Label x:Name="LblCast" Text="Person One, Person Two"/>
+                        <Label x:Name="LblCast" Text=""/>
                     </HorizontalStackLayout>
                     <HorizontalStackLayout>
                         <Label Text="Director" WidthRequest="100"/>
-                        <Label x:Name="LblDirector" Text="Director One"/>
+                        <Label x:Name="LblDirector" Text=""/>
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
-                
             </Grid>
+            
+            <!-- User Rating Stuff Goes Here-->
+                
+                
+            
             
             <Grid x:Name="FilmReview" IsVisible="False">
                 <Grid.RowDefinitions>
@@ -58,7 +84,7 @@
                 <HorizontalStackLayout Grid.Row="1" HorizontalOptions="Center" >
                     <Label  x:Name="LblAuthor" Text="ReviewAuthor" VerticalOptions="Center" WidthRequest="500"/>
                     <AbsoluteLayout Margin="10" x:Name="AbsLayoutReviewScore2" HorizontalOptions="EndAndExpand">
-                        <Ellipse WidthRequest="60" HeightRequest="60" Fill="DarkRed" Stroke="MediumVioletRed" StrokeThickness="15" />
+                        <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" />
                         <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                     </AbsoluteLayout>
                 </HorizontalStackLayout>                
