--- a/AccessReel/AccessReel/FilmPage.xaml
+++ b/AccessReel/AccessReel/FilmPage.xaml
@@ -18,28 +18,20 @@
 			<!-- Media Player Goes Here -->
             <StackLayout x:Name="videoStackLayout"></StackLayout>
 
-            <HorizontalStackLayout HorizontalOptions="Center">
-                <Label x:Name="LblTitle" Text="{Binding Title}" HorizontalOptions="Start" FontSize="Title" VerticalOptions="Center" WidthRequest="400"/>
-                <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutReviewScore" HorizontalOptions="End">
-                    <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" />
-                    <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
-                </AbsoluteLayout>
-            </HorizontalStackLayout>
-
             <!-- Title/Score -->
             <HorizontalStackLayout HorizontalOptions="Center">
                 <Label x:Name="LblTitle" Text="Film Title" HorizontalOptions="Start" FontSize="Title" VerticalOptions="Center" WidthRequest="400"/>
                 <VerticalStackLayout> <!-- Critic review score -->
                     <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutReviewScore" HorizontalOptions="End">
-                        <Ellipse WidthRequest="60" HeightRequest="60" Fill="DarkRed" Stroke="MediumVioletRed" StrokeThickness="15" />
-                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
+                        <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" />
+                        <Label Text="{Binding ReviewScore}" TextColor="White" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                     </AbsoluteLayout>
                     <Label Text="Critic" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
                 </VerticalStackLayout>
                 <VerticalStackLayout> <!-- Member review score -->
                     <AbsoluteLayout Grid.Column="2" Margin="10" x:Name="AbsLayoutMemberScore" HorizontalOptions="End">
-                        <Ellipse WidthRequest="60" HeightRequest="60" Fill="MediumTurquoise" Stroke="PaleTurquoise" StrokeThickness="15" />
-                        <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
+                        <Ellipse WidthRequest="60" HeightRequest="60" Fill="#2d99a1" Stroke="#00d1e4" StrokeThickness="15" />
+                        <Label Text="{Binding MemberReviewScore}" TextColor="White" AbsoluteLayout.LayoutBounds="{Binding MemberReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                     </AbsoluteLayout>
                     <Label Text="Members" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
                 </VerticalStackLayout>
@@ -62,7 +54,7 @@
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="200"/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="800"/>
                 </Grid.ColumnDefinitions>
 
 				<StackLayout Grid.Column="2" Grid.Row="0" >
@@ -73,11 +65,8 @@
                     <Image x:Name="ImagePoster" />
                     <Button Text="Follow +" TextColor="White" BackgroundColor="#00d0e5" HorizontalOptions="Center" />
                 </VerticalStackLayout>
-                <Label Grid.Column="1" Grid.Row="1" x:Name="LblDesc" Text="{Binding Description}"/>
+                <Label Grid.Column="1" Grid.Row="1" x:Name="LblDesc" Text="{Binding Description}" Margin="50,10,0,0"/>
 
-                <Image x:Name="ImagePoster" Grid.Column="0" Grid.Row="0" Source="dotnet_bot.png" MaximumWidthRequest="50"/>
-                <Label Grid.Column="1" Grid.Row="0" x:Name="LblDesc" Text="In Venom: The Last Dance, Tom Hardy returns as Venom, one of Marvel’s greatest and most complex characters, for the final film in the trilogy. Eddie and Venom are on the run. Hunted by both of their worlds and with the net closing in, the duo are forced into a devastating decision that will bring the curtains down on Venom and Eddie’s last dance."/>
-                
 	<!-- User Rating Stuff Goes Here-->
                 <VerticalStackLayout Grid.Row="2" Grid.ColumnSpan="2">
                     <HorizontalStackLayout>
@@ -95,7 +84,7 @@
                 </VerticalStackLayout>
 
 	        <!-- Film Details-->
-                <VerticalStackLayout Grid.Column="0" Grid.Row="1" Margin="30" Grid.ColumnSpan="2">
+                <VerticalStackLayout Grid.Column="2" Grid.Row="2" Margin="40,0,00,50" Grid.ColumnSpan="2">
                     <HorizontalStackLayout>
                         <Label Text="Genre:" WidthRequest="100" />
                         <Label x:Name="LblGenre" Text=""/>
