--- a/AccessReel/AccessReel/FilmPage.xaml
+++ b/AccessReel/AccessReel/FilmPage.xaml
@@ -89,18 +89,20 @@
 
 	        <!-- Film Details-->
                 <VerticalStackLayout Grid.Column="2" Grid.Row="2" Margin="40,0,00,50" Grid.ColumnSpan="2">
-                    <HorizontalStackLayout>
-                        <Label Text="Genre:" WidthRequest="100" />
-                        <Label x:Name="LblGenre" Text=""/>
-                    </HorizontalStackLayout>
-                    <HorizontalStackLayout>
-                        <Label Text="Cast:" WidthRequest="100"/>
-                        <Label x:Name="LblCast" Text=""/>
-                    </HorizontalStackLayout>
-                    <HorizontalStackLayout>
-                        <Label Text="Director" WidthRequest="100"/>
-                        <Label x:Name="LblDirector" Text=""/>
-                    </HorizontalStackLayout>
+                    <StackLayout x:Name="GenreStackLayout" Padding="10">
+                        <Label Text="Genre"/>
+                        <!-- Genre items will be added by code -->
+                    </StackLayout>
+
+                    <StackLayout x:Name="CastStackLayout" Padding="10">
+                        <Label Text="Cast"/>
+                        <!-- Cast items will be added by code -->
+                    </StackLayout>
+
+                    <StackLayout x:Name="DirectorStackLayout" Padding="10">
+                        <Label Text="Directors"/>
+                        <!-- Director items will be added by code -->
+                    </StackLayout>
                 </VerticalStackLayout>
             </Grid>
             
@@ -111,14 +113,22 @@
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.5*"/>
                     <ColumnDefinition Width="8*"/>
                     <ColumnDefinition Width="0.5*"/>
                 </Grid.ColumnDefinitions>
+                <!-- Review -->
                 <Label Grid.Row="0" Grid.Column="1" x:Name="LblReview" Text="ReviewPlaceholder" HorizontalOptions="Center" Margin="0,40,0,0"/>
-                <HorizontalStackLayout Grid.Row="1" Grid.Column="1" HorizontalOptions="Center" >
+                
+                <!-- Tags -->
+                <HorizontalStackLayout Grid.Row="1" Grid.Column="1" x:Name="TagsStackLayout" Padding="10" >
+                    <!-- Tags will be added here by code-->
+                </HorizontalStackLayout>
+                
+                <HorizontalStackLayout Grid.Row="2" Grid.Column="1" HorizontalOptions="Center" >
                     <HorizontalStackLayout>
                         <Image x:Name="ImageAuthor" Source="dotnet_bot.png" HeightRequest="60" WidthRequest="60" Margin="5"/>
                         <Label  x:Name="LblAuthor" Text="ReviewAuthor" VerticalOptions="Center" WidthRequest="500">
@@ -126,8 +136,9 @@
                                 <TapGestureRecognizer Tapped="AuthorTapped"/>
                             </Label.GestureRecognizers>
                         </Label>
-                    </HorizontalStackLayout>                    
-                    <AbsoluteLayout Margin="10" x:Name="AbsLayoutReviewScore2" HorizontalOptions="EndAndExpand">
+                    </HorizontalStackLayout>                
+                    
+                    <AbsoluteLayout Margin="20" x:Name="AbsLayoutReviewScore2" HorizontalOptions="EndAndExpand">
                         <Ellipse WidthRequest="60" HeightRequest="60" Fill="#c3184a" Stroke="#f61e5b" StrokeThickness="15" />
                         <Label Text="{Binding ReviewScore}" AbsoluteLayout.LayoutBounds="{Binding ReviewScore, Converter={StaticResource ReviewScoreToAbsLayoutConverter}}" AbsoluteLayout.LayoutFlags="PositionProportional" FontSize="Medium" />
                     </AbsoluteLayout>
